# hst

./: .travis.yml  Cargo.toml
hst-core/: Cargo.toml
hst-core/proptest-regressions/: external_choice.txt  internal_choice.txt  normalization.txt  prefix.txt  sequential_composition.txt
hst-core/src/: csp.rs  event.rs  external_choice.rs  internal_choice.rs  iterators.rs  lib.rs  models.rs  normalization.rs  possibilities.rs  prefix.rs  primitives.rs  process.rs  sequential_composition.rs  test_support.rs
hst-processes/: Cargo.toml
hst-processes/src/: csp.rs  event.rs  external_choice.rs  internal_choice.rs  lib.rs  maximal_traces.rs  prefix.rs  primitives.rs  sequential_composition.rs  test_support.rs
